--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-matplotlib
-pandas
-seaborn
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+from statsmodels.tsa.seasonal import seasonal_decompose
+from google.colab import files
 streamlit
