--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ numpy==1.25.2
 pandas==2.1.4
 seaborn==0.13.0
 streamlit==1.30.0
+backcall-0.2.0 
+docopt-0.6.2 
+ipython-8.12.3 
+pickleshare-0.7.5 
+pipreqs-0.5.0 
+yarg-0.1.9
