--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-matplotlib==3.8.0
-numpy==1.25.2
-pandas==2.1.4
-seaborn==0.13.0
-streamlit==1.30.0
+matplotlib-3.8.0
+numpy-1.25.2
+pandas-2.1.4
+seaborn-0.13.0
+streamlit-1.30.0
 backcall-0.2.0 
 docopt-0.6.2 
 ipython-8.12.3 
